--- a/src/frontend/obras.html
+++ b/src/frontend/obras.html
@@ -11,6 +11,7 @@
 </head>
 <body>
 
+    <!-- Navbar -->
     <div id="navBar" class="row gx-0">
         <div id="divMenu" class="col-2 divNav"><p class="textoCentro">Menu</p></div>
         <div id="vazioNav" class="col-4"></div>
@@ -42,6 +43,7 @@
         <button onclick="filtroRegional()">Filtrar</button>
     </div>
 
+    <!-- Div das obras, que será atualizada pelo script -->
     <div id="nomesDasObras" class="row gy-4 overflow-auto"></div>
 
     <script>
