path da imagem da pagina de login consertado

--- a/src/frontend/login.html
+++ b/src/frontend/login.html
@@ -36,7 +36,7 @@
     <div class="main-login">
          <div class="left-login">
             <h1>Faça login<br>E encontre as melhores oportunidades de acordo com o seu perfil</h1>
-            <img src="logo.pnj2.png" class="left-login-image">
+            <img src="../imgs/logo.pnj2.png" class="left-login-image">
          </div>
          <div class="right-login ">
             <div class="card-login">
