--- a/src/frontend/comoFunciona.html
+++ b/src/frontend/comoFunciona.html
@@ -11,7 +11,6 @@
         integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
         crossorigin="anonymous"></script>
     <link rel="stylesheet" href="css/comoFunciona.css">
-    <script src="../backend/comoFunciona.js"></script>
     <title>Como Funciona</title>
 </head>
 
@@ -42,6 +41,7 @@
 
     </nav>
 
+    <!-- A página consiste apenas em um accordion com função única e exclusiva informativa, de forma que a cada etapa clicada, será exibida ao usuário uma descrição da respectiva parte do projeto-->
 
 
     <div class="container" id="div_maior">
@@ -51,95 +51,6 @@
             </div>
         </div>
 
-        <!-- <div class="accordion accordion-flush" id="accordionExample">
-            <div class="accordion-item ">
-                <h2 class="accordion-header" id="headingOne"  >
-                    <button class="accordion-button" type="button" data-bs-toggle="collapse"
-                        data-bs-target="#collapseOne" aria-expanded="true"
-                        aria-controls="collapseOne">
-                        CADASTRO
-                    </button>
-                </h2>
-                <div id="collapseOne" class="accordion-collapse collapse show"  aria-labelledby="headingOne" data-bs-parent="#accordionFlushExample">
-                    <div class="accordion-body">
-                        Se cadastre na plataforma para poder se candidatar para as principais oportunidades da MRV.
-                    </div>
-                </div>
-            </div>
-            <div class="accordion-item">
-                <h2 class="accordion-header" id="headingTwo">
-                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                        data-bs-target="#collapseTwo" aria-expanded="false"
-                        aria-controls="collapseTwo">
-                        CANDIDATURA
-                    </button>
-                </h2>
-                <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionFlushExample">
-                    <div class="accordion-body">
-                        Após filtrar os serviços que melhor atendam o seu perfil, se candidate a vaga de seu interesse
-                    </div>
-                </div>
-            </div>
-            <div class="accordion-item">
-                <h2 class="accordion-header" id="headingThree">
-                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                        data-bs-target="#collapseThree" aria-expanded="false"
-                        aria-controls="collapseThree">
-                        ANEXO DE INFORMAÇÕES
-                    </button>
-                </h2>
-                <div id="collapseThree" class="accordion-collapse collapse"  aria-labelledby="headingThree" data-bs-parent="#accordionFlushExample">
-                    <div class="accordion-body">
-                        Em seguida, tendo informações sobre a obra, você poderá visitar a obra escolhida e após isso enviará uma proposta de valor para execução daquele serviço que você escolheu
-                    </div>
-                </div>
-            </div>
-            <div class="accordion-item">
-                <h2 class="accordion-header" id="headingFour">
-                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                        data-bs-target="#collapseFour" aria-expanded="false"
-                        aria-controls="collapseFour">
-                        NEGOCIAÇÃO DE VALORES
-                    </button>
-                </h2>
-                <div id="collapseFour" class="accordion-collapse collapse"  aria-labelledby="headingFour" data-bs-parent="#accordionFlushExample">
-                    <div class="accordion-body">
-                        Em seguida, tendo informações sobre a obra, você poderá visitar a obra escolhida e após isso enviará uma proposta de valor para execução daquele serviço que você escolheu
-                    </div>
-                </div>
-            </div>
-            <div class="accordion-item">
-                <h2 class="accordion-header" id="headingFive">
-                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                        data-bs-target="#collapseFive" aria-expanded="false"
-                        aria-controls="collapseFive">
-                        ANÁLISE DA MRV
-                    </button>
-                </h2>
-                <div id="collapseFive" class="accordion-collapse collapse"  aria-labelledby="headingFive" data-bs-parent="#accordionFlushExample">
-                    <div class="accordion-body">
-                        Após ter anexado informações referentes a sua empreiteira e enviado o orçamento para realizar
-                    determinado serviço, a MRV analisará suas informações e entrará em contato com você para te informar
-                    o resultado final.
-                    </div>
-                </div>
-            </div>
-            <div class="accordion-item">
-                <h2 class="accordion-header" id="headingSix">
-                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                        data-bs-target="#collapseSix" aria-expanded="false"
-                        aria-controls="collapseSix">
-                        FECHAMENTO
-                    </button>
-                </h2>
-                <div id="collapseSix" class="accordion-collapse collapse"  aria-labelledby="headingSix" data-bs-parent="#accordionFlushExample">
-                    <div class="accordion-body">
-                        Com o aval, a MRV te solicitará alguns documentos para realizar tal serviço e você receberá mais
-                    informações para seu início de trabalho
-                    </div>
-                </div>
-            </div>
-        </div> -->
 
         <div class="accordion" id="accordionExample">
             <div class="accordion-item">
@@ -218,67 +129,6 @@
                 </div>
             </div>
         </div>
-        
-
-        <!-- <div class="row linha_etapa">
-            <div class="col-1 numero_etapa">
-                <h1>1</h1>
-            </div>
-            <div class="col-8">
-                <h3>CADASTRO</h3>
-                <p>Se cadastre na plataforma para poder se candidatar para as principais oportunidades da MRV.</p>
-            </div>
-        </div>
-        <div class="row linha_etapa">
-            <div class="col-1 numero_etapa">
-                <h1>2</h1>
-            </div>
-            <div class="col-8">
-                <h3>CANDIDATURA</h3>
-                <p>Após filtrar os serviços que melhor atendam o seu perfil, se candidate a vaga de seu interesse
-                </p>
-            </div>
-        </div>
-        <div class="row linha_etapa">
-            <div class="col-1 numero_etapa">
-                <h1>3</h1>
-            </div>
-            <div class="col-8">
-                <h3>ANEXO DE INFORMAÇÕES</h3>
-                <p>Depois de ter selecionado um serviço, anexe informações para que a MRV possa te conhecer melhor
-                </p>
-            </div>
-        </div>
-        <div class="row linha_etapa">
-            <div class="col-1 numero_etapa">
-                <h1>4</h1>
-            </div>
-            <div class="col-8">
-                <h3>NEGOCIAÇÃO DE VALORES</h3>
-                <p>Em seguida, tendo informações sobre a obra, você poderá visitar a obra escolhida e após isso enviará uma proposta de valor para execução daquele serviço que você escolheu</p>
-            </div>
-        </div>
-        <div class="row linha_etapa">
-            <div class="col-1 numero_etapa">
-                <h1>5</h1>
-            </div>
-            <div class="col-8">
-                <h3>ANÁLISE DA MRV</h3>
-                <p>Após ter anexado informações referentes a sua empreiteira e enviado o orçamento para realizar
-                    determinado serviço, a MRV analisará suas informações e entrará em contato com você para te informar
-                    o resultado final.</p>
-            </div>
-        </div>
-        <div class="row linha_etapa" id="ultima_linha">
-            <div class="col-1 numero_etapa">
-                <h1>6</h1>
-            </div>
-            <div class="col-8">
-                <h3>FECHAMENTO</h3>
-                <p>Com o aval, a MRV te solicitará alguns documentos para realizar tal serviço e você receberá mais
-                    informações para seu início de trabalho</p>
-            </div>
-        </div> -->
     </div>
 
 
