comeco da integracao da pagina de servicos

--- a/src/frontend/ofertas.html
+++ b/src/frontend/ofertas.html
@@ -47,7 +47,7 @@
 </div>
 
   <!--Aqui fica o background cinza-->
-<div class="fundo">
+<div class="fundo" id="mainServicos">
 
             <!--Aqui fica a descriçao-->
             <div class="descricao">
@@ -99,6 +99,6 @@
 
  </div>            
 
-
+<script src="../backend/ofertas.js"></script>
 </body>
 </html>
