--- a/src/frontend/login.html
+++ b/src/frontend/login.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     <link rel="stylesheet" href="css/login.css">
+    <script src="../backend/login.js"></script>
     <title>Login </title>
  </head>
  <body>
@@ -51,15 +53,22 @@
                 <!-- input usuario -->
                 <div class="campoDeTexto">
                     <label for="usuario">Usuário</label>
-                    <input type="text" name="usuario" placeholder="Usuário">
+                    <input type="text" name="usuario" id="email" placeholder="Usuário">
                 </div>
                 <!-- input senha -->
                 <div class="campoDeTexto">
                     <label for="senha">Senha</label>
-                    <input type="password" name="senha" placeholder="Senha">
+                    <input type="password" name="senha" id="senha" placeholder="Senha">
                 </div>
                 <!-- Botão de login -->
-                <button class="botaoLogin">Login</button>
+                
+                <button class="botaoLogin" onclick="validaLogin()">Login
+                    <a id="link_botao"></a>
+                </button>
+
+                <div id="erro">
+                </div>
+
             </div>
          </div>
     </div>
