Atualização da home

--- a/src/index.html
+++ b/src/index.html
@@ -14,6 +14,7 @@
 <p><a href="/frontend/login.html">PAGINA DE LOGIN</a></p>
 <p><a href="/frontend/meuPerfil.html">PAGINA DE PERFIL</a></p>
 <p><a href="/frontend/ofertas.html">PAGINA DE OFERTAS</a></p>
+<p><a href="/frontend/home.html">HOME LUQUITA</a></p>
 
 <script>
     const url = '/obras';
