nav bar meio linkada

--- a/src/frontend/home.html
+++ b/src/frontend/home.html
@@ -17,7 +17,7 @@
             <div class="menuNavbarGrande">
                 <a class="menuNavbar" onclick="abrirMenu()">Menu</a>
                 <a class="loginNavbar" href="login.html">Login</a>
-                <a class="registrarNavbar" href="">Registrar-se</a>
+                <a class="registrarNavbar" href="cadastro.html">Registrar-se</a>
 
 
 
@@ -31,10 +31,10 @@
 
         <div id="menu" class="mobileMenu">
             <a class="item1DropDown" href="login.html">Login</a>
-            <a class="item2DropDown" href="">Registrar-se</a>
-            <a class="item3DropDown" href="" target="_blank">Obras</a>
-            <a class="item4DropDown" href="">Como Funciona</a>
-            <a class="item5DropDown" href="">Home</a>
+            <a class="item2DropDown" href="cadastro.html">Registrar-se</a>
+            <a class="item3DropDown" href="obras.html" target="_blank">Obras</a>
+            <a class="item4DropDown" href="comoFunciona.html">Como Funciona</a>
+            <a class="item5DropDown" href="home.html">Home</a>
 
 
         </div>
