--- a/src/frontend/cadastro.html
+++ b/src/frontend/cadastro.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Formulário de várias etapas</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/pageCadastro.css">
     <script src="https://kit.fontawesome.com/a076d05399.js"></script>
   </head>
   <body>
@@ -110,7 +110,7 @@
         </form>
       </div>
     </div>
-    <script src="script.js"></script>
+    <script src="../backend/scriptCadastro.js"></script>
 
   </body> 
 
