--- a/src/frontend/home.html
+++ b/src/frontend/home.html
@@ -30,11 +30,11 @@
  
 
         <div id="menu" class="mobileMenu">
-            <a class="item1DropDown" href="login.html">Login</a>
-            <a class="item2DropDown" href="cadastro.html">Registrar-se</a>
-            <a class="item3DropDown" href="obras.html" target="_blank">Obras</a>
-            <a class="item4DropDown" href="comoFunciona.html">Como Funciona</a>
-            <a class="item5DropDown" href="home.html">Home</a>
+            <a class="item1DropDown" href="home.html">Home</a>
+            <a class="item2DropDown" href="obras.html">Obras</a>
+            <a class="item3DropDown" href="comoFunciona.html">Como Funciona</a>
+            <a class="item4DropDown" href="cadastro.html">Registrar-se</a>
+            <a class="item5DropDown" href="login.html">Login</a>
 
 
         </div>
