nav bar adicionada na pagina de obras e servicos

--- a/src/frontend/home.html
+++ b/src/frontend/home.html
@@ -48,7 +48,7 @@
             <div class="text">
                 
                 <p><strong>A MRVisão</strong> é uma plataforma que conecta você, empreiteiro(a), as principais oportunidades da MRV.</p>
-                <a href="#">Visualizar todas as nossas oportunidades</a>
+                <a href="obras.html">Visualizar todas as nossas oportunidades</a>
             </div>
         </div>
     
