--- a/src/frontend/cadastro.html
+++ b/src/frontend/cadastro.html
@@ -41,7 +41,7 @@
         </div> -->
       </div>
       <div class="form-outer">
-        <form action="#">
+        <form method="post" action="/insereUsuario">
           <div class="page slide-page">
             <div class="title">Informação básica:</div>
             <div class="field">
@@ -53,7 +53,7 @@
               <input type="text" name="cnpj">
             </div>
             <div class="field">
-              <button class="firstNext next">Próximo</button>
+              <button type="button" class="firstNext next">Próximo</button>
             </div>
           </div>
 
@@ -69,7 +69,7 @@
             </div>
             <div class="field btns">
               <button class="prev-1 prev">Anterior</button>
-              <button class="next-1 next">Próximo</button>
+              <button type="button" class="next-1 next">Próximo</button>
             </div>
           </div>
           
@@ -105,7 +105,7 @@
             </div>
             <div class="field btns">
               <button class="prev-3 prev">Anterior</button>
-              <button class="submit">Enviar</button>
+              <button type="submit" class="submit">Enviar</button>
             </div>
           </div>
         </form>
