--- a/src/frontend/ofertas.html
+++ b/src/frontend/ofertas.html
@@ -6,7 +6,7 @@
     
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>NavBar</title>
-    <link rel="stylesheet" href="css/cssJoao.css">
+    <link rel="stylesheet" href="css/ofertas.css">
   
 
 
