registrar e home comentados

--- a/src/frontend/cadastro.html
+++ b/src/frontend/cadastro.html
@@ -10,7 +10,9 @@
   <body>
     <div class="container">
       <header>Cadastro</header>
+      <!-- Aqui está a barra de progresso -->
       <div class="progress-bar">
+        <!-- Aqui está a primeira etapa, empreiteira -->
         <div class="step">
           <p>Empreiteira</p>
           <div class="bullet">
@@ -18,6 +20,7 @@
           </div>
           <div class="check fas fa-check"></div>
         </div>
+        <!-- Aqui está a segunda etapa, contato -->
         <div class="step">
           <p>Contato</p>
           <div class="bullet">
@@ -25,6 +28,7 @@
           </div>
           <div class="check fas fa-check"></div>
         </div>
+        <!-- Aqui está a terceira etapa, conta -->
         <div class="step">
           <p>Conta</p>
           <div class="bullet">
@@ -40,8 +44,11 @@
           <div class="check fas fa-check"></div>
         </div> -->
       </div>
+      <!-- Divisória externa do cadastro -->
       <div class="form-outer">
+        <!-- Form que envolve o cadastro e manda as informações para a requisição post de usuário -->
         <form method="post" action="/insereUsuario">
+          <!-- Página de empreiteira -->
           <div class="page slide-page">
             <div class="title">Informação básica:</div>
             <div class="field">
@@ -57,6 +64,7 @@
             </div>
           </div>
 
+          <!-- Página de contato -->
           <div class="page">
             <div class="title">Informações de contato</div>
             <div class="field">
@@ -93,6 +101,7 @@
             </div>
           </div> -->
           
+          <!-- Página de conta -->
           <div class="page">
             <div class="title">Detalhes de login:</div>
             <div class="field">
