--- a/src/frontend/ofertas.html
+++ b/src/frontend/ofertas.html
@@ -7,7 +7,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>NavBar</title>
     <link rel="stylesheet" href="css/ofertas.css">
-  
+    <link href="https://fonts.googleapis.com/css2?family=Material+Icons" rel="stylesheet">
+
+
+
 
 
     
