correcoes da nav bar na pagina de obras e ofertas

--- a/src/frontend/ofertas.html
+++ b/src/frontend/ofertas.html
@@ -6,12 +6,9 @@
     
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>NavBar</title>
+    <link href="css/cssNavbar.css" rel="stylesheet"/>
     <link rel="stylesheet" href="css/ofertas.css">
     <link href="https://fonts.googleapis.com/css2?family=Material+Icons" rel="stylesheet">
-
-
-
-
 
     
 <body>
