--- a/src/frontend/homeAdmin.html
+++ b/src/frontend/homeAdmin.html
@@ -6,8 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     <link rel="stylesheet" href="css/meuPerfil.css">
-    <link rel="stylesheet" href="css/home&meuPerfil.css">
+    <!-- <link rel="stylesheet" href="css/home&meuPerfil.css"> -->
     <link rel="stylesheet" href="css/homeAdmin.css">
+    <script src="../backend/homeAdmin.js"></script>
     <title>Home - Admin</title>
 </head>
 <body>
@@ -21,8 +22,8 @@
         <div class="row justify-content-center align-items-center" id="primeira_linha">
             <div class="col-3 rounded-4 justify-content-center align-items-start" id="barra_de_pesquisa">
                 <div class="row align-items-center">
-                    <p class="col-3">Buscar</p>
-                    <img class="offset-6 col-2" src="../imgs/lupa (1).png" alt="">
+                    <input type="text" class="col-10 rounded-4" placeholder="Buscar" id="inputPesquisa">
+                    <img class="col-2" src="../imgs/lupa (1).png" alt="">
                 </div>
             </div>
             <div class="offset-1 col-1" id="ordenar">
@@ -38,7 +39,7 @@
                 </div>
             </div>
             <div class="offset-1 col-2" id="adiciona_obra">
-                <button class="rounded-5" id="botao_adiciona_obra">
+                <button class="rounded-5" id="botao_adiciona_obra" onclick="redirecionaAdicionaObra()">
                     <div class="row align-items-center" id="botao_adiciona_margin">
                         <img class="col-3" src="../imgs/mais (1).png" alt="">
                         <p class="col-8">Adicionar Obra</p>
@@ -46,15 +47,15 @@
                 </button>
             </div>
         </div>
-        <div class="row" id="Meus_Projetos">
-            <h1 class="justify-content-start">Meus Projetos</h1>
+        <div class="row align-items-center" id="Meus_Projetos">
+            <h3 class="justify-content-start align-items-center">Meus Projetos</h3>
         </div>
 
         <!-- Abaixo, tem-se um container que organiza os cards de obras que o funcionário é responsável por gerir-->
 
         <div class="row">
-            <div class="container" id="catalogo_obras">
-                <div class="row linha_obras" id="0" >
+            <div class="container" id="catalogoObras">
+                <div class="row linha_obras" id="linhaObras0" >
                     <div class="card_servicos offset-1 col-2">
                         <div class="row">
                             <img class="img_obra" src="../imgs/obra-mrv-campo-grande-ms-881485.jpg" alt=""> 
@@ -62,7 +63,7 @@
                         
                         <div class="container informacoes_card">
                             <div class="row">
-                                <h3>Alexandre Halfed</h3>  
+                                <h3><strong>Alexandre Halfed</strong></h3>  
                             </div>
                             <div class="row informacoes_baixo" >
                                 <div class="container">
@@ -168,6 +169,7 @@
                             </div>
                         </div>
                     </div>
+                    <button class="col-3" id="adicionaCard" onclick="adicionaCard()"></button>
                 </div>
             </div>
         </div>
