--- a/src/frontend/comoFunciona.html
+++ b/src/frontend/comoFunciona.html
@@ -8,36 +8,45 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="css/cssNavbar.css">
+    <link href="https://fonts.googleapis.com/css2?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="css/comoFunciona.css">
     <title>Como Funciona</title>
 </head>
 
 <body>
 
-    <nav>
-
-
-
-        <div>
-            <ul class="esquerda">
-                <div class="teste">
-                    <li><a href="#">MENU</a></li>
-                </div>
-            </ul>
-
-
-            <ul class="direita">
-                <div>
-                    <li class="teste"><a href="#">REGISTRAR</a></li>
-                    <li class="teste"><a href="#">LOGIN</a></li>
-                </div>
-            </ul>
-
-        </div>
-
-
-
-    </nav>
+        <!-- Navbar -->
+        <header>
+          <nav>
+              <img id="fotoLogo" src="../imgs/MRVisão.png">
+              <div class="menuNavbarGrande">
+                  <a class="menuNavbar" onclick="abrirMenu()">Menu</a>
+                  <a class="loginNavbar" href="login.html">Login</a>
+                  <a class="registrarNavbar" href="cadastro.html">Registrar-se</a>
+  
+  
+  
+              </div>
+  
+              <button class="btnDropDown">
+                  <span class="material-icons">menu</span>
+              </button>
+          </nav>  
+   
+  
+          <div id="menu" class="mobileMenu">
+              <a class="item1DropDown" href="home.html">Home</a>
+              <a class="item2DropDown" href="obras.html">Obras</a>
+              <a class="item3DropDown" href="comoFunciona.html">Como Funciona</a>
+              <a class="item4DropDown" href="cadastro.html">Registrar-se</a>
+              <a class="item5DropDown" href="login.html">Login</a>
+  
+  
+          </div>
+  
+      
+      </header>
 
     <!-- A página consiste apenas em um accordion com função única e exclusiva informativa, de forma que a cada etapa clicada, será exibida ao usuário uma descrição da respectiva parte do projeto-->
 
@@ -129,6 +138,7 @@
         </div>
     </div>
 
+    <script src="js/joao.js"></script>
 
 </body>
 
