--- a/src/frontend/home.html
+++ b/src/frontend/home.html
@@ -13,7 +13,7 @@
 <body>
     <header>
         <nav>
-            <img id="fotoLogo" src="../imgs/MRVisão.png">
+            <img id="fotoLogo" src="../imgs/MRVisão.png" onclick="voltarHome()">
             <div class="menuNavbarGrande">
                 <a class="menuNavbar" onclick="abrirMenu()">Menu</a>
                 <a class="loginNavbar" href="login.html">Login</a>
