--- a/src/frontend/login.html
+++ b/src/frontend/login.html
@@ -15,7 +15,7 @@
     <!-- Navbar -->
     <header>
         <nav>
-            <img id="fotoLogo" src="../imgs/MRVisão.png">
+            <img id="fotoLogo" src="../imgs/MRVisão.png" onclick="voltarHome()">
             <div class="menuNavbarGrande">
                 <a class="menuNavbar" onclick="abrirMenu()">Menu</a>
                 <a class="loginNavbar" href="login.html">Login</a>
