Aprimorando telas de Admin

--- a/src/frontend/adminServicos.html
+++ b/src/frontend/adminServicos.html
@@ -41,7 +41,7 @@
                 </div>
             </div> -->
             <div class="offset-5 col-2 align-items-center" id="adiciona_obra">
-                <button class="rounded-5" id="botao_adiciona_obra" onclick="redirecionaAdicionaObra()">
+                <button class="rounded-5" id="botao_adiciona_obra" onclick="redirecionaAdicionaServico()">
                     <div class="row align-items-center" id="botao_adiciona_margin">
                         <img class="col-3" src="../imgs/mais (1).png" alt="">
                         <p class="col-8">Adicionar Serviços</p>
