Deixando login de Admin funcionando (quase)

--- a/src/frontend/homeAdmin.html
+++ b/src/frontend/homeAdmin.html
@@ -30,13 +30,13 @@
                     <img class="col-2" src="../imgs/lupa (1).png" alt="">
                 </div>
             </div>
-            <div class="offset-1 col-1" id="ordenar">
+            <!-- <div class="offset-1 col-1" id="ordenar">
                 <div class="row align-items-center">
                     <img class="offset-2 col-3" src="../imgs/ordenar.png" alt="">
                     <p class="offset-1 col-6">Ordenar</p>
                 </div>
-            </div>
-            <div class="offset-1 col-1" id="filtro">
+            </div> -->
+            <div class="offset-2 col-1" id="filtro">
                 <div class="row align-items-center">
                     <img class="offset-2 col-3" src="../imgs/simbolo-de-ferramenta-preenchido-com-filtro.png" alt="">
                     <p class="offset-1 col-6">Filtrar</p>
