--- a/src/frontend/inserir.html
+++ b/src/frontend/inserir.html
@@ -22,6 +22,16 @@
         <br>
         <input type="submit" value="INSERIR">
     </form>
+
+    <!-- <br><br><br>
+
+    <form name="form2" method="post" action="/insereAdmin">
+        email: <input type="text" name="email" value="" required>
+        <br>
+        senha: <input type="text" name="senha" value="" required>
+        <br>
+        <input type="submit" value="INSERIR">
+    </form> -->
 </body>
 
 </html>
