--- a/src/frontend/editarObra.html
+++ b/src/frontend/editarObra.html
@@ -15,20 +15,38 @@
 
     <script>
 
-        document.getElementById("formEditar").innerHTML = `
-            <form name="form1" method="post" action="/atualizaObra">
-                NOME: <input type="text" name="nome" value="${}" required>
-                <br>
-                ENDEREÇO: <input type="text" name="endereco" value="${}" required>
-                <br>
-                DATA-INICIO: <input type="date" name="dataInicio" value="${}" required>
-                <br>
-                DATA-FIM: <input type="date" name="dataFim" value="${}" required>
-                <br>
-                DESCRIÇÃO: <input type="text" name="descricao" value="${}" required>
-                <br>
-                <input type="submit" value="INSERIR">
-            </form>`
+        let parametroURL = new URLSearchParams(window.location.search)
+        let obra_id = parametroURL.get('obra_id')
+
+        console.log(obra_id)
+
+        fetch('/obraId?obra_id=' + obra_id)
+            .then((response) => {
+            return response.json();
+            })
+            .then((data) => {
+                obra = data;
+                obra.map(function (obra) {
+                    console.log(obra.nome)
+                    document.getElementById("formEditar").innerHTML = `
+                        <form name="form1" method="post" action="/atualizaObra?obra_id=${obra.obra_id}">
+                            NOME: <input type="text" name="nome" value="${obra.nome}" required>
+                            <br>
+                            ENDEREÇO: <input type="text" name="endereco" value="${obra.endereco}" required>
+                            <br>
+                            DATA-INICIO: <input type="date" name="dataInicio" value="${obra.dataInicio}" required>
+                            <br>
+                            DATA-FIM: <input type="date" name="dataFim" value="${obra.dataFim}" required>
+                            <br>
+                            DESCRIÇÃO: <input type="text" name="descricao" value="${obra.descricao}" required>
+                            <br>
+                            <input type="submit" value="INSERIR">
+                        </form>`
+
+                })
+                
+            })
+
 
     </script>
 </body>
