--- a/src/frontend/homeAdmin.html
+++ b/src/frontend/homeAdmin.html
@@ -24,11 +24,10 @@
         <!-- Abaixo tem-se uma div row que contém os elementos de uma espécie de Navbar da página -->
 
         <div class="row justify-content-center align-items-center" id="primeira_linha">
-            <div class="col-3 rounded-4 justify-content-center align-items-start" id="barra_de_pesquisa">
-                <div class="row align-items-center">
-                    <input type="text" class="col-10 rounded-4" placeholder="Buscar" id="inputPesquisa">
-                    <img class="col-2" src="../imgs/lupa (1).png" alt="">
-                </div>
+            <div class="col-3 rounded-4" id="barra_de_pesquisa">
+                <input type="text" class="rounded-4" placeholder="Buscar" id="inputPesquisa">
+                <!-- <img class="col-2" src="../imgs/lupa (1).png" alt=""> -->
+                <ion-icon name="search-outline"></ion-icon>
             </div>
             <!-- <div class="offset-1 col-1" id="ordenar">
                 <div class="row align-items-center">
@@ -76,6 +75,9 @@
     </div>
     </div>
     </div>
+
+    <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+    <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
 </body>
 
 </html>
