--- a/src/frontend/comoFunciona.html
+++ b/src/frontend/comoFunciona.html
@@ -44,9 +44,26 @@
   
   
           </div>
-  
+          <div class="modal" id="modalLogout" tab-index="-1" aria-labelledby="tituloDoModal" aria-hidden="true">
+            <div class="modal-dialog modal-dialog-centered">
+              <div class="modal-content">
+                <div class="modal-header">
+                  <h5 class="modal-title" id="tituloDoModal">
+                    Logout
+                  </h5>
+                  <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                  <p>Tem certeza que deseja se deslogar?</p>
+                </div>
+                <div class="modal-footer">
+                  <button type="button" onclick="location.href = '../logout';" class="btn btn-primary">Logout</button>
+                </div>
+              </div>
+            </div>
+          </div>
       
-      </header>
+        </header>
 
     <!-- A página consiste apenas em um accordion com função única e exclusiva informativa, de forma que a cada etapa clicada, será exibida ao usuário uma descrição da respectiva parte do projeto-->
 
