--- a/src/frontend/obras.html
+++ b/src/frontend/obras.html
@@ -42,9 +42,26 @@
 
 
         </div>
-
-    
-    </header>
+        <div class="modal" id="modalLogout" tab-index="-1" aria-labelledby="tituloDoModal" aria-hidden="true">
+          <div class="modal-dialog modal-dialog-centered">
+            <div class="modal-content">
+              <div class="modal-header">
+                <h5 class="modal-title" id="tituloDoModal">
+                  Logout
+                </h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+              </div>
+              <div class="modal-body">
+                <p>Tem certeza que deseja se deslogar?</p>
+              </div>
+              <div class="modal-footer">
+                <button type="button" onclick="location.href = '../logout';" class="btn btn-primary">Logout</button>
+              </div>
+            </div>
+          </div>
+        </div>
+        
+      </header>
 
     <div id="divFiltros">
         <!-- Select de filtro por estado -->
