estilizacao do modal de logout

--- a/src/frontend/comoFunciona.html
+++ b/src/frontend/comoFunciona.html
@@ -57,7 +57,7 @@
                   <p>Tem certeza que deseja se deslogar?</p>
                 </div>
                 <div class="modal-footer">
-                  <button type="button" onclick="location.href = '../logout';" class="btn btn-primary">Logout</button>
+                  <button id="botaoLogout" type="button" onclick="location.href = '../logout';" class="btn btn-primary">Logout</button>
                 </div>
               </div>
             </div>
