--- a/src/frontend/home.html
+++ b/src/frontend/home.html
@@ -6,6 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
+        <link rel="stylesheet" href="css/cssNavbar.css">
         <link rel="stylesheet" href="css/home.css">
         <link href="https://fonts.googleapis.com/css2?family=Material+Icons" rel="stylesheet">
     <title>Home</title>
@@ -54,7 +55,7 @@
                   <p>Tem certeza que deseja se deslogar?</p>
                 </div>
                 <div class="modal-footer">
-                  <button type="button" onclick="location.href = '../logout';" class="btn btn-primary">Logout</button>
+                  <button id="botaoLogout" type="button" onclick="location.href = '../logout';" class="btn btn-primary">Logout</button>
                 </div>
               </div>
             </div>
