--- a/src/frontend/login.html
+++ b/src/frontend/login.html
@@ -56,7 +56,7 @@
                   <p>Tem certeza que deseja se deslogar?</p>
                 </div>
                 <div class="modal-footer">
-                  <button type="button" onclick="location.href = '../logout';" class="btn btn-primary">Logout</button>
+                  <button id="botaoLogout" type="button" onclick="location.href = '../logout';" class="btn btn-primary">Logout</button>
                 </div>
               </div>
             </div>
