--- a/src/frontend/meuPerfil.html
+++ b/src/frontend/meuPerfil.html
@@ -55,7 +55,7 @@
                 <p>Tem certeza que deseja se deslogar?</p>
               </div>
               <div class="modal-footer">
-                <button type="button" onclick="location.href = '../logout';" class="btn btn-primary">Logout</button>
+                <button id="botaoLogout" type="button" onclick="location.href = '../logout';" class="btn btn-primary">Logout</button>
               </div>
             </div>
           </div>
@@ -174,7 +174,7 @@
         </div>
         
         <!-- Função criada apenas para testes -->
-        <button onclick="adiciona_card()"></button>
+        <button id=botaoAdicionaCard" onclick="adiciona_card()"></button>
 
     </div>
     
