--- a/src/frontend/wpp.html
+++ b/src/frontend/wpp.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contato</title>
     <link rel="stylesheet" href="css/cssWpp.css"/>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
 	<link href="https://fonts.googleapis.com/css2?family=Material+Icons" rel="stylesheet">
 
 </head>
@@ -81,7 +82,7 @@
         </select>
     </div>
 
-    <div class="wpp">
+    <div id="wpp" class="wpp">
         <a>Clique aqui para falar com um de nossos representantes!</a><br><br>
         <button onclick="abrirwpp()"> Ir para o Whatsapp</button>
     </div>
