--- a/src/frontend/inserir.html
+++ b/src/frontend/inserir.html
@@ -6,9 +6,60 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>INSERIR OBRAS</title>
+    <link rel="stylesheet" href="css/inserir.css">
 </head>
 
 <body>
+
+<!-- Navbar -->
+<header>
+    <nav>
+        <img id="fotoLogo" src="../imgs/MRVisão.png" onclick="voltarHome()">
+        <div class="menuNavbarGrande">
+            <a class="menuNavbar" onclick="abrirMenu()">Menu</a>
+            <a class="loginNavbar" href="login.html">Login</a>
+            <a class="registrarNavbar" href="cadastro.html">Registrar-se</a>
+
+
+
+        </div>
+
+        <button class="btnDropDown">
+            <span class="material-icons">menu</span>
+        </button>
+    </nav>  
+
+
+    <div id="menu" class="mobileMenu">
+        <a class="item1DropDown" href="home.html">Home</a>
+        <a class="item2DropDown" href="obras.html">Obras</a>
+        <a class="item3DropDown" href="comoFunciona.html">Como Funciona</a>
+        <a class="item4DropDown" href="cadastro.html">Registrar-se</a>
+        <a class="item5DropDown" href="login.html">Login</a>
+
+
+    </div>
+    <div class="modal" id="modalLogout" tab-index="-1" aria-labelledby="tituloDoModal" aria-hidden="true">
+      <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="tituloDoModal">
+              Logout
+            </h5>
+            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+          </div>
+          <div class="modal-body">
+            <p>Tem certeza que deseja se deslogar?</p>
+          </div>
+          <div class="modal-footer">
+            <button id="botaoLogout" type="button" onclick="location.href = '../logout';" class="btn btn-primary">Logout</button>
+          </div>
+        </div>
+      </div>
+    </div>
+    
+  </header>
+
     <form name="form1" method="post" action="/insereObra">
         NOME: <input type="text" name="nome" value="" required>
         <br>
@@ -32,6 +83,8 @@
         <br>
         <input type="submit" value="INSERIR">
     </form> -->
+
+    <script src="js/joao.js"></script>
 </body>
 
 </html>
