--- a/src/frontend/homeAdmin.html
+++ b/src/frontend/homeAdmin.html
@@ -15,7 +15,7 @@
     <title>Home - Admin</title>
 </head>
 
-<body>
+<body onload="getStatusObra()">
 
     <!-- A lógica do código é baseada em diversas div's sucessivas com container, row e col, a fim de organizar a disposição dos elementos na página -->
 
@@ -35,10 +35,14 @@
                     <p class="offset-1 col-6">Ordenar</p>
                 </div>
             </div> -->
-            <div class="offset-2 col-1" id="filtro">
+            <div class="offset-1 col-2" id="filtro">
                 <div class="row align-items-center">
-                    <img class="offset-2 col-3" src="../imgs/simbolo-de-ferramenta-preenchido-com-filtro.png" alt="">
-                    <p class="offset-1 col-6">Filtrar</p>
+                    <select class="col-7" name="filtroStatus" id="filtroStatus">
+                        <option value="Em andamento">Em andamento</option>
+                        <option value="Cancelado">Cancelado</option>
+                        <option value="Concluido">Concluido</option>
+                    </select>
+                    <button class="offset-1 col-4" id="botaoFiltrar" onclick="getStatusObra()">Filtrar</button>
                 </div>
             </div>
             <div class="offset-1 col-2" id="adiciona_obra">
@@ -62,7 +66,8 @@
                     <th scope="col">Endereço</th>
                     <th scope="col">Serviços</th>
                     <th scope="col">Editar</th>
-                    <th scope="col">Concluir</th>
+                    <th scope="col" id="Cancelar">Cancelar</th>
+                    <th scope="col" id="Concluir">Concluir</th>
 
                 </tr>
             </thead>
