--- a/src/frontend/inserir.html
+++ b/src/frontend/inserir.html
@@ -7,6 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>INSERIR OBRAS</title>
     <link rel="stylesheet" href="css/inserir.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
 </head>
 
 <body>
@@ -39,40 +41,55 @@
 
 
     </div>
-    <div class="modal" id="modalLogout" tab-index="-1" aria-labelledby="tituloDoModal" aria-hidden="true">
-      <div class="modal-dialog modal-dialog-centered">
-        <div class="modal-content">
-          <div class="modal-header">
-            <h5 class="modal-title" id="tituloDoModal">
-              Logout
-            </h5>
-            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-          </div>
-          <div class="modal-body">
-            <p>Tem certeza que deseja se deslogar?</p>
-          </div>
-          <div class="modal-footer">
-            <button id="botaoLogout" type="button" onclick="location.href = '../logout';" class="btn btn-primary">Logout</button>
-          </div>
-        </div>
-      </div>
-    </div>
+
     
   </header>
 
-    <form name="form1" method="post" action="/insereObra">
-        NOME: <input type="text" name="nome" value="" required>
+  <div class="container justify-content-center align-items-center">
+
+  <form name="form1" method="post" action="/insereObra">
+        <h2>Novas Obras</h2>
+        <div class="input">
+            NOME: <input type="text" name="nome" value="" required>
+        </div>
         <br>
-        ENDEREÇO: <input type="text" name="endereco" value="" required>
+        <div class="input">
+            ENDEREÇO: <input type="text" name="endereco" value="" required>
+        </div>
         <br>
-        DATA-INICIO: <input type="date" name="dataInicio" value="" required>
+        <div class="input">
+            DATA-INICIO: <input type="date" name="dataInicio" value="" required>
+        </div>
         <br>
-        DATA-FIM: <input type="date" name="dataFim" value="" required>
+        <div class="input">
+            DATA-FIM: <input type="date" name="dataFim" value="" required>
+        </div>
         <br>
-        DESCRIÇÃO: <input type="text" name="descricao" value="" required>
+        <div class="input">
+            DESCRIÇÃO: <input type="text" name="descricao" rows="" value="" required>
+        </div>
         <br>
+        <div class="input">
         <input type="submit" value="INSERIR">
     </form>
+
+</div>
+
+<div class="modal" id="modalLogout" tab-index="-1" aria-labelledby="tituloDoModal" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered">
+      <div class="modal-content">
+        <div class="modal-header">
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body">
+          <p>Tem certeza que deseja se deslogar?</p>
+        </div>
+        <div class="modal-footer">
+          <button id="botaoLogout" type="button" onclick="location.href = '../logout';" class="btn btn-primary">Logout</button>
+        </div>
+      </div>
+    </div>
+  </div>
 
     <!-- <br><br><br>
 
