--- a/src/frontend/homeAdmin.html
+++ b/src/frontend/homeAdmin.html
@@ -60,18 +60,18 @@
 
         <table class="table table-striped">
             <thead>
-                <tr>
+                <tr id="tabelaHead">
                     <th scope="col">Número</th>
                     <th scope="col">Nome da Obra</th>
                     <th scope="col">Endereço</th>
                     <th scope="col">Serviços</th>
                     <th scope="col">Editar</th>
-                    <th scope="col" id="Cancelar">Cancelar</th>
-                    <th scope="col" id="Concluir">Concluir</th>
+                    <th scope="col" id="elemento1">Cancelar</th>
+                    <th scope="col" id="elemento2">Concluir</th>
 
                 </tr>
             </thead>
-            <tbody id="tabela">
+            <tbody id="tabelaBody">
 
             </tbody>
         </table>
