Atualizando: Update serviços e feedback

--- a/src/frontend/homeAdmin.html
+++ b/src/frontend/homeAdmin.html
@@ -35,14 +35,14 @@
                     <p class="offset-1 col-6">Ordenar</p>
                 </div>
             </div> -->
-            <div class="offset-1 col-2" id="filtro">
+            <div class="col-3" id="filtro">
                 <div class="row align-items-center">
-                    <select class="col-7" name="filtroStatus" id="filtroStatus">
+                    <select class="col-8" name="filtroStatus" id="filtroStatus">
                         <option value="Em andamento">Em andamento</option>
                         <option value="Cancelado">Cancelado</option>
                         <option value="Concluido">Concluido</option>
                     </select>
-                    <button class="offset-1 col-4" id="botaoFiltrar" onclick="getStatusObra()">Filtrar</button>
+                    <button class="offset-1 col-3" id="botaoFiltrar" onclick="getStatusObra()">Filtrar</button>
                 </div>
             </div>
             <div class="offset-1 col-2" id="adiciona_obra">
