--- a/src/frontend/adminServicos.html
+++ b/src/frontend/adminServicos.html
@@ -22,23 +22,21 @@
         <!-- Abaixo tem-se uma div row que contém os elementos de uma espécie de Navbar da página -->
 
         <div class="row justify-content-center align-items-center" id="primeira_linha">
-            <div class="col-3 rounded-4 justify-content-center align-items-start" id="barra_de_pesquisa">
-                <div class="row align-items-center">
-                    <input type="text" class="col-10 rounded-4" placeholder="Buscar" id="inputPesquisa">
-                    <img class="col-2" src="../imgs/lupa (1).png" alt="">
-                </div>
+            <div class="col-3 rounded-4" id="barra_de_pesquisa">
+                <input type="text" class="rounded-4" placeholder="Buscar" id="inputPesquisa">
+                <ion-icon name="search-outline"></ion-icon>
             </div>
-            <div class="offset-1 col-2" id="filtro">
+            <div class="col-3" id="filtro">
                 <div class="row align-items-center">
-                    <select class="col-7" name="filtroStatus" id="filtroStatus">
+                    <select class="col-8" name="filtroStatus" id="filtroStatus">
                         <option value="Em andamento">Em andamento</option>
                         <option value="Canceladas">Cancelado</option>
                         <option value="Concluidas">Concluido</option>
                     </select>
-                    <button class="offset-1 col-4" id="botaoFiltrar" onclick="getStatusServico()">Filtrar</button>
+                    <button class="offset-1 col-3" id="botaoFiltrar" onclick="getStatusServico()">Filtrar</button>
                 </div>
             </div>
-            <div class="offset-2 col-2 align-items-center" id="adiciona_obra">
+            <div class="offset-1 col-2 align-items-center" id="adiciona_obra">
                 <button class="rounded-5" id="botao_adiciona_obra" onclick="redirecionaAdicionaServico()">
                     <div class="row align-items-center" id="botao_adiciona_margin">
                         <img class="col-3" src="../imgs/mais (1).png" alt="">
@@ -64,6 +62,7 @@
                 </tr>
             </thead>
             <tbody id="tabelaServicos">
+                
             </tbody>
         </table>
         
@@ -73,6 +72,7 @@
 </div>
 <div id="entradaModal"></div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+<script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
 <script src="../backend/adminServicos.js"></script>
 </body>
 
