--- a/src/frontend/meuPerfil.html
+++ b/src/frontend/meuPerfil.html
@@ -173,7 +173,7 @@
             </div>
         </div>
     </div>
-    
+    <div id="entradaModal"></div>
     <script src="../backend/meuPerfil.js"></script>
     <script src="js/joao.js"></script>
 </body>
