acréscimo de inputs

--- a/src/frontend/inserir.html
+++ b/src/frontend/inserir.html
@@ -58,6 +58,14 @@
         </div>
         <br>
         <div class="input">
+            Cidade: <input type="text" name="cidade" value="" required>
+        </div>
+        <br>
+        <div class="input">
+            Estado: <input type="text" name="estado" value="" required>
+        </div>
+        <br>
+        <div class="input">
             DATA-INICIO: <input type="date" name="dataInicio" value="" required>
         </div>
         <br>
