--- a/src/frontend/inserirServico.html
+++ b/src/frontend/inserirServico.html
@@ -7,15 +7,44 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="../backend/inserirServico.js"></script>
     <title>INSERIR Servico</title>
+    <link rel="stylesheet" href="css/inserirServico.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
 </head>
 
 <body>
 
     
 
-    <div id="formulario">
+    <div class="container justify-content-center align-items-center">
 
-    </div>
+        <form name="form1" method="post" action="/insereObra">
+              <h2>Inserir Serviço</h2>
+              <div class="input">
+                  NOME: <input type="text" name="nome" value="" required>
+              </div>
+              <br>
+              <div class="input">
+                  ENDEREÇO: <input type="text" name="endereco" value="" required>
+              </div>
+              <br>
+              <div class="input">
+                  DATA-INICIO: <input type="date" name="dataInicio" value="" required>
+              </div>
+              <br>
+              <div class="input">
+                  DATA-FIM: <input type="date" name="dataFim" value="" required>
+              </div>
+              <br>
+              <div class="input">
+                  DESCRIÇÃO: <input type="text" name="descricao" rows="" value="" required>
+              </div>
+              <br>
+              <div class="input">
+              <input type="submit" value="INSERIR">
+          </form>
+      
+      </div>
     <!--
     <form name="form1" method="post" action="/insereServico?obra_id=5">
         Tipo: <input type="text" name="tipo" value="" required>
