Linkando css de inserir e editar Servicos

--- a/src/frontend/inserirServico.html
+++ b/src/frontend/inserirServico.html
@@ -41,7 +41,8 @@
               </div>
               <br>
               <div class="input">
-              <input type="submit" value="INSERIR">
+                <input type="submit" value="INSERIR">
+              </div>
           </form>
       
       </div>
